--- a/static/css/style_shop.css
+++ b/static/css/style_shop.css
@@ -258,7 +258,7 @@ main button {
 
 .dark-mode .footer a {
     background-color: black;
-    color: white;
+    color: gray;
 }
 
 /* Responsive */
