--- a/static/css/Product_Page_style.css
+++ b/static/css/Product_Page_style.css
@@ -285,11 +285,7 @@ hr {
         border-color: white;
     }
 
-    h1,
-    h2,
-    h4,
-    h6,
-    p {
+    h1, h2, h4, h6, p {
         color: white;
     }
 
@@ -329,13 +325,11 @@ hr {
         color: white;
     }
 
-    .select-items div,
-    .select-selected {
+    .select-items div, .select-selected {
         background-color: black;
     }
 
-    .select-items div:hover,
-    .same-as-selected {
+    .select-items div:hover, .same-as-selected {
         background-color: rgba(128, 128, 128, 1)
     }
 
@@ -366,11 +360,11 @@ hr {
         transition: 0.25s ease-out;
     }
 
-    .navbar>a {
+    .navbar > a {
         color: white;
     }
 
-    .leftfooter>a {
+    .leftfooter > a {
         background-color: white;
         box-shadow: rgb(255, 255, 255) 2px 2px 2px 0px;
     }
