--- a/static/css/Product_Page_style.css
+++ b/static/css/Product_Page_style.css
@@ -199,8 +199,7 @@ body {
     top: 15px;
 }
 
-.select-items div,
-.select-selected {
+.select-items div, .select-selected {
     background-color: white;
     padding: 15px 16px;
     cursor: pointer;
@@ -222,8 +221,7 @@ body {
     display: none;
 }
 
-.select-items div:hover,
-.same-as-selected {
+.select-items div:hover, .same-as-selected {
     background-color: rgba(128, 128, 128, 1)
 }
 
@@ -338,7 +336,7 @@ hr {
         color: black;
     }
 
-    .buyButtons>#addButton {
+    .buyButtons > #addButton {
         background-color: rgb(125, 122, 122);
     }
 
@@ -431,7 +429,7 @@ hr {
         margin-left: 3%;
     }
 
-    .info_product>h1 {
+    .info_product > h1 {
         width: 325px;
         height: 50px;
     }
@@ -441,7 +439,7 @@ hr {
         flex-direction: column-reverse;
     }
 
-    .info>h2 {
+    .info > h2 {
         margin-top: 30px;
     }
 
