--- a/static/css/Product_Page_style.css
+++ b/static/css/Product_Page_style.css
@@ -344,7 +344,7 @@ hr {
         color: white;
     }
 
-    .dark-mode .select-items div, .select-selected {
+    .dark-mode .select-items div, .dark-mode .select-selected {
         background-color: black;
     }
 
