--- a/static/css/accueil.css
+++ b/static/css/accueil.css
@@ -1,7 +1,8 @@
-
 body {
     overflow-x: hidden;
 }
+
+/* PARTIE DU HAUT JUSQU'AU SLIDESHOW */
 
 .topparagraph {
     animation-name: topparagraph-anim;
@@ -43,9 +44,15 @@ body {
     transition: 0.25s ease-in;
 }
 
+/* FIN PARTIE HAUT */
+
 
 
 /* SLIDE SHOW */
+
+.image-slideshow {
+    box-shadow: 5px 5px 7px 5px gray;
+}
 
 .image-slideshow {
     max-width: 1000px;
@@ -72,6 +79,11 @@ body {
 .gererslide {
     text-align: center;
 }
+
+/* FIN SLIDESHOW */
+
+
+/* LOGOS (marques de confiance */
 
 .marqueconfiance {
     padding: 1%;
@@ -102,8 +114,6 @@ body {
     transform: translateX(25%);
 }
 
-
-
 .marquestyle1.active {
     opacity: 1;
     transform: translateY(0%);
@@ -121,6 +131,8 @@ body {
     transform: translateY(0%);
     transform: translateX(0%);
 }
+
+/* FIN LOGOS (marques de confiance */
 
 /* ANIMATIONS */
 
@@ -162,9 +174,9 @@ body {
     }
 }
 
-.image-slideshow {
-    box-shadow: 5px 5px 7px 5px gray;
-}
+/* FIN ANIMATION */
+
+
 
 
 
@@ -211,10 +223,9 @@ body {
 
 .dark-mode .marquestyle1, .dark-mode .marquestyle2, .dark-mode .marquestyle3 {
     background-color: white;
-
-
-
 }
+
+/* FIN DARK MODE */
 
 /* RESPONSIVE PAGE ACCUEIL */
 
