let's go j'ai trouvé des trucs à patch

--- a/static/css/style_shop.css
+++ b/static/css/style_shop.css
@@ -261,6 +261,10 @@ main button {
     color: gray;
 }
 
+.dark-mode #pastille-panier {
+    color: white;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
     .container {
